Explicitly allow attaching an agent in linkerProfile
Silence warnings (and future proof):

```
WARNING: A JVM TI agent has been loaded dynamically (/opt/YourKit/bin/linux-x86-64/libyjpagent.so)
WARNING: If a serviceability tool is in use, please run with -XX:+EnableDynamicAgentLoading to hide this warning
WARNING: Dynamic loading of agents will be disallowed by default in a future release
```